Using Variables to set the section padding used for correct spacing while using subnavs

--- a/Resources/public/less/example.less
+++ b/Resources/public/less/example.less
@@ -5,6 +5,7 @@ html, body {
 body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the navbar */
 }
+
 .container {
   >footer{
     >p {
@@ -21,12 +22,7 @@ body {
             border-radius: 0 0 6px 6px;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-            box-shadow: 0 1px 2px rgba(0,0,0,.15);/* Page header tweaks */
-    .page-header {
-      background-color: #f5f5f5;
-      padding: 20px 20px 10px;
-      margin: -20px -20px 20px;
-    }
+            box-shadow: 0 1px 2px rgba(0,0,0,.15);
   }
 }
 .navbar .btn {
